# CMG

./: Cargo.toml  README.md  openapi.json
.github/actions/: rust.yaml
.github/workflows/: rust.yaml
src/: lib.rs  main.rs
