[package]
name = "cmg"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Michael Jaquier <michael.jaquier@nexthink.com>"]
description = "A math game for children"
repository = "https://github.com/michael-jaquier/CMG"
readme = "README.md"
keywords = ["math", "game", "children"]

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
