[package]
name = "cmg"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Michael Jaquier <michael.jaquier@nexthink.com>"]
description = "A math game for children"
repository = "https://github.com/michael-jaquier/CMG"
readme = "README.md"
keywords = ["math", "game", "children"]

[dependencies]
rand = "0.9.0"
thiserror = "2.0.11"

# Dependencies that are only enabled when the "server" feature is active
tokio = { version = "1.43.0", features = ["macros"], optional = true }
schemars = { version = "0.8.22", optional = true }
serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_json = { version = "1.0.139", optional = true }
dropshot = { version = "0.16.0", optional = true }
semver = {version= "1.0.26", optional = true}

[features]
server = ["tokio", "schemars", "serde", "serde_json", "dropshot", "semver"]

[[bin]]
name = "server"
path = "src/main.rs"
